retrieveUnpackaged/objects/Business_Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the user that needs to approve this request</inlineHelpText>
        <label>Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Requirement</label>
        <referenceTo>Business_Requirement__c</referenceTo>
        <relationshipLabel>Child Business Requirements</relationshipLabel>
        <relationshipName>Business_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>P1 - Highest Priority, P5 - Lowest Priority</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Business Requirements</relationshipLabel>
        <relationshipName>Business_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement_Details__c</fullName>
        <label>Requirement Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Type__c</fullName>
        <label>Requirement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Entity Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revision_Number__c</fullName>
        <label>Revision Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <label>Use Case</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Business Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Pending</fullName>
        <columns>NAME</columns>
        <columns>Release__c</columns>
        <columns>Parent_Requirement__c</columns>
        <columns>Title__c</columns>
        <columns>Priority__c</columns>
        <columns>Requested_By__c</columns>
        <columns>Approval__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Requirement_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Pending</label>
    </listViews>
    <nameField>
        <displayFormat>USR-{000000}</displayFormat>
        <label>Business Requirement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>